--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
      .white{
          color: white;
      }
+     @media (max-width: 1000px) {
+        .none{
+          display: none;
+        }
+        .block{
+          font-size: 0.5rem;
+        }
+        .marg10{
+          margin-top: -5%;
+          margin-bottom: 0.5%;
+        }
+        .column{
+          grid-template-rows: 1fr;
+        }
+        .six{
+          width: 100%;
+        }
+     }
  </style>
 </head>
 <body>
@@ -67,9 +85,9 @@
               </div>
               </div>
 <br> <br> <br>
-              <div class="ui grid colourbl marg">
-                <div class="six wide column"><img src="./image.png" alt=""></div>
-                <div class="six wide column marg10"><h1 class="medium white">I am a teen programmer who aspires to change the world using tech, I am aged 12 and started coding at 10 <br> It has changed my outlook on life, I am also part of a society that helps teens called <a href="https://anchor.fm/theteensarena">[The Teens Arena]</a> My life has been exciting ever since i started coding and met people like <a href="https://twitter.com/_dark_code_?lang=en">[Joshua Nwankwo]</a> & <a href="https://twitter.com/sixtusnnam?lang=en">[Sixtus Nnamdi]</a> <br> I currently have a youtube channel where i teach coding and I thinking of starting another one where i share life experiences. <i class="angle double down icon"><a target="blank" href="https://docs.google.com/document/d/1WxNWWWLHLZt97q-aKUHiTBThcXyGsmhOtojgaVVukiM/edit?usp=sharing">More</a></i> </h1></div>
+              <div class="ui grid colourbl">
+                <div class="six wide column none"><img src="./image.png" alt=""></div>
+                <div class="six wide column marg10"><h1 class="block">I am a teen programmer who aspires to change the world using tech, I am aged 12 and started coding at age 10 <br> It has changed my outlook on life, I am also part of a society that helps teens called The Teens Arena. My life has been exciting ever since I started coding and met people like Joshua Nwankwo and Sixtus Nnamdi <br> I currently have a youtube channel where I teach coding and I am thinking of starting another one where I share valuable life experiences. <i class="angle double down icon"><a target="blank" href="https://docs.google.com/document/d/1WxNWWWLHLZt97q-aKUHiTBThcXyGsmhOtojgaVVukiM/edit?usp=sharing">More</a></i></h1></div>
               </div>
 
               <div class="ui message">
