--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
         .six{
           width: 100%;
         }
+        .col{
+          background-color: white;
+          color: black;
+          text-align: center;
+        }
+        .stuff{
+          margin: 0 auto;
+        }
      }
  </style>
 </head>
@@ -85,9 +93,9 @@
               </div>
               </div>
 <br> <br> <br>
-              <div class="ui grid colourbl">
+              <div class="ui grid colourbl col">
                 <div class="six wide column none"><img src="./image.png" alt=""></div>
-                <div class="six wide column marg10"><h1 class="block">I am a teen programmer who aspires to change the world using tech, I am aged 12 and started coding at age 10 <br> It has changed my outlook on life, I am also part of a society that helps teens called The Teens Arena. My life has been exciting ever since I started coding and met people like Joshua Nwankwo and Sixtus Nnamdi <br> I currently have a youtube channel where I teach coding and I am thinking of starting another one where I share valuable life experiences. <i class="angle double down icon"><a target="blank" href="https://docs.google.com/document/d/1WxNWWWLHLZt97q-aKUHiTBThcXyGsmhOtojgaVVukiM/edit?usp=sharing">More</a></i></h1></div>
+                <div class="six wide column marg10 stuff"><h1 class="block">I am a teen programmer who aspires to change the world using tech, I am aged 12 and started coding at age 10 <br> It has changed my outlook on life, I am also part of a society that helps teens called The Teens Arena. My life has been exciting ever since I started coding and met people like Joshua Nwankwo and Sixtus Nnamdi <br> I currently have a youtube channel where I teach coding and I am thinking of starting another one where I share valuable life experiences. <i class="angle double down icon"><a target="blank" href="https://docs.google.com/document/d/1WxNWWWLHLZt97q-aKUHiTBThcXyGsmhOtojgaVVukiM/edit?usp=sharing">More</a></i></h1></div>
               </div>
 
               <div class="ui message">
