fourth commit link fix

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <i class="right angle icon divider"></i>
             <a class="section" href="#about">About</a>
             <i class="right angle icon divider"></i>
-            <a class="section href="#contact">Contact</div>
+            <a class="section" href="#contact">Contact</div>
           </div>          
     </div>
     <div class="ui container" id="home">
